--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /crowdin/es/es.json
+  - source: /crowdin/es/content.json
     translation: /crowdin/%two_letters_code%/%original_file_name%
